first is commmited

--- a/first.html
+++ b/first.html
@@ -1,6 +1,13 @@
 <html>
     <head>
         <title>Mobrose</title>
+        <style>
+            .sample{
+                display:none;
+                height:auto;
+                width:auto;
+            }
+        </style>
     </head>
     <body>
         <p> hello ,welcome to the first application of Mobrose inc,</p>
